<resources>
    <string name="app_name">Lab4</string>
    <string name="hello_message">Hello world!</string>
    <string name="ButtonText"> I\'am a button</string>
    <string name="textview1">Look at my GUI</string>
    <string name="button1">Click here</string>
    <string name="checkbox1">Check this out!</string>
    <string name="switch1">Switch on / off</string>
    <string name="hint1">Type here</string>
    <string name="toast_msg">Here is more information</string>
    <string name="passwd">Type your password:</string>
    <string name="hint2">Type email here</string>
    <string name="tv_enter_your_email">Enter your email address:</string>
    <string name="btn_login">login</string>
    <string name="tv_your_profile">Your profile</string>
    <string name="tv_your_name">Your name</string>
    <string name="et_enter_your_name">Enter your name</string>
    <string name="tv_your_email">Your email:</string>
    <string name="et_enter_your_email">Enter your email</string>
    <string name="tv_your_picture">Your picture:</string>
    <string name="tv_click_the_button_picture">Click the button above to take a picture</string>
    <string name="btn_go_to_chat">Go to chat</string>
    <string name="btn_send">Send</string>
    <string name="et_type_here">Type here</string>
    <string name="btn_receive">Receive</string>
    <string name="go_to_weather_forcast">Go to Weather Forcast</string>
    <string name="value">good weather</string>
    <string name="min">min today</string>
    <string name="max">max today</string>
    <string name="uv_rating">uv today</string>
</resources>
