<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/tv_your_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_your_profile" />

    <TextView
        android:id="@+id/tv_your_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_your_name" />

    <EditText
        android:id="@+id/et_enter_your_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_enter_your_name"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tv_your_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_your_email" />

    <EditText
        android:id="@+id/et_enter_your_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_enter_your_email"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/tv_your_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_your_picture" />

    <ImageButton
        android:id="@+id/picture_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/picture_frame" />

    <TextView
        android:id="@+id/tv_click_the_button_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_click_the_button_picture" />

    <Button
        android:id="@+id/btn_go_to_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_go_to_chat" />

</LinearLayout>