<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="30sp"
        android:text="@string/textview1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_alignParentStart="true"
        android:text="@string/button1" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_toEndOf="@id/button2"
        android:text="@string/checkbox1" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/button2"
        android:layout_alignParentStart="true"
        app:srcCompat="@drawable/flag" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/button2"
        android:layout_toEndOf="@id/imageButton"
        android:text="@string/switch1" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint1" />
</RelativeLayout>