<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChatRoomActivity">

    <ListView
        android:id="@+id/lv_chat_room"
        android:layout_width="match_parent"
        android:layout_height="450dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_weight="1"
            android:text="@string/btn_send" />
        <EditText
            android:id="@+id/et_chat_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="10"
            android:hint="@string/et_type_here"
            android:importantForAutofill="no"
            android:inputType="text" />
        <Button
            android:id="@+id/btn_receive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_weight="1"
            android:text="@string/btn_receive" />

    </LinearLayout>
</LinearLayout>